# MirrorMirror

./: CMakeLists.txt  README.md
data/: video.avi
data/test/: image.txt
data/test/scores/: attractive_score.txt  serious_score.txt
src/: BlendModule.cpp  BlendModule.h  CLMTrackingModule.cpp  CLMTrackingModule.h  CMakeLists.txt  Descriptor.h  FadeModule.cpp  FadeModule.h  FastImage.cpp  FastImage.h  FeatureModule.cpp  FeatureModule.h  HOGDescriptor.cpp  HOGDescriptor.h  ImageDatabase.cpp  ImageDatabase.h  ImageTools.cpp  ImageTools.h  LaplacianBlend.cpp  LaplacianBlend.h  MirrorMain.cpp  MirrorMain.h  Parameter.cpp  Parameter.h  PredictModule.cpp  PredictModule.h  RecordModule.cpp  RecordModule.h  ResizableWindow.cpp  ResizableWindow.h  SVMSolver.cpp  SVMSolver.h  SaveModule.cpp  SaveModule.h  Timer.cpp  Timer.h  TrainModule.cpp  TrainModule.h  Utility.cpp  Utility.h  (+8 more)
svm/: CMakeLists.txt  svm.cpp
